--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.4.0",
     "astro": "^5.7.13"
-  }
+  },
+  "devDependencies": {
+  "tailwindcss": "^3.4.1",
+  "autoprefixer": "^10.4.0",
+  "@astrojs/tailwind": "^5.0.0",
+  "postcss": "^8.4.0"
+}
 }
